# awesome-rust

./: Cargo.toml  README.md
actix-gcd/: Cargo.toml
actix-gcd/src/: divisor.rs  main.rs
collections/: Cargo.toml
collections/src/: main.rs  quiz.rs  spread_sheet.rs  vector_loop.rs
enums/: Cargo.toml
enums/src/: main.rs  matches.rs
ownership/: Cargo.toml
ownership/src/: main.rs  ref.rs  slice.rs
rectangles/src/: main.rs
restaurant/src/: back_of_house.rs  customer.rs  front_of_house.rs
restaurant/src/front_of_hourse/: hosting.rs  serving.rs
src/: algebreaic.rs  borrowing.rs  main.rs  ownership.rs  pattern_match.rs  struct.rs  traits.rs  traits_err.rs
structs/src/: main.rs
