[package]
name = "awesome-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pattern_match"
path = "src/pattern_match.rs"

[workspace]
members = ["actix-gcd", "backyard", "enums", "ownership", "rectangles", "restaurant", "structs"]

ignore = [
    "/target/",
    "/build/" 
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8"
